Fix date picker focus align for vibrant theme with datagrid

--- a/src/components/datagrid/_datagrid-uplift.scss
+++ b/src/components/datagrid/_datagrid-uplift.scss
@@ -32,13 +32,6 @@
   }
 }
 
-// Adjust icon for firefox
-.is-firefox {
-  .datagrid-header .datagrid-filter-wrapper .timepicker + .icon {
-    top: -2px;
-  }
-}
-
 // Adjust header text
 .datagrid-header-text {
   font-size: $theme-size-font-xs !important;
@@ -56,6 +49,12 @@
     .hyperlink {
       margin-top: -2px;
     }
+
+    &.is-editing {
+      .datepicker {
+        margin-top: 6px;
+      }
+    }
   }
 
   // Medium Row Height
@@ -65,6 +64,10 @@
         &.is-editing {
           &.has-singlecolumn {
             min-height: $datagrid-medium-row-height + 10;
+          }
+
+          .datepicker {
+            margin-top: 0;
           }
         }
       }
@@ -95,4 +98,42 @@
 .is-gridlist.has-draggable-columns th .handle {
   font-size: 23px;
   top: -3px;
+}
+
+// Firefox
+.is-firefox {
+  // Adjust icon for firefox
+  .datagrid-header .datagrid-filter-wrapper .timepicker + .icon {
+    top: -2px;
+  }
+
+  // Main Grid for firefox
+  .datagrid {
+    td {
+      &.is-editing {
+        .datepicker {
+          ~ .icon {
+            top: calc(50% - 17px);
+          }
+        }
+      }
+    }
+
+    // Medium Row Height for firefox
+    &.medium-rowheight {
+      tbody tr {
+        td {
+          &.is-editing {
+            .datepicker {
+              margin-top: 0;
+
+              ~ .icon {
+                top: calc(50% - 17px);
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
